--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/JonasJore/pokemon-rs.git"
-documentation = "https://github.com/JonasJore/pokemon-rs"
+documentation = "https://docs.rs/pokemon-rs/latest/pokemon_rs/"
 description = "Rust crate for getting Pokémon names"
 repository = "https://github.com/JonasJore/pokemon-rs"
 
