✨ #26 Added support for getting regions in multi-language
the code still supports only english, but i have made changes in the code for other languages just to be added to be supported:

- replaced enum values and matching on numbers to find correct region name, with a data function containing a hashmap with usize as key.
- this save me the extra logic needed when handling vectors like with the data functions containing pokemon names. maybe this is something to consider for pokemon names later? 🤔

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ description = "Rust crate for getting Pokémon names"
 repository = "https://github.com/JonasJore/pokemon-rs"
 
 [dependencies]
+maplit = "1.0.2"
 rand = "0.8.5"
